Fix spacing and overlap issues and fix default profile picture logo

--- a/views/styles/edit-profile.css
+++ b/views/styles/edit-profile.css
@@ -1,7 +1,6 @@
 .navbar-placeholder {
   background-color: var(--primary-dark);
   display: grid;
-  height: 15vh;
   grid-template-columns: 1fr;
   grid-template-rows: 1fr;
   grid-column: 1 / span 3;
@@ -9,20 +8,20 @@
 }
 
 .container {
+  min-height: 100vh;
   display: grid;
-  height: 100vh;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: 15% 35% 50% 55%;
+  grid-template-rows: minmax(15vh, 100px) auto;
 }
 
 .profile-header {
   background-color: var(--primary);
   grid-column: 1 / span 3;
-  grid-row: 2 / span 2;
+  grid-row: 2 / span 1;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   text-align: center;
   overflow: hidden;
+  padding-bottom: 5%;
 }
 
 .profile-head {
@@ -31,8 +30,13 @@
   justify-content: center;
 }
 
+.profile-picture > img {
+  max-width: 40%;
+  background: white;
+}
+
 .profile-header img {
-  clip-path: circle(40% at center);
+  clip-path: circle(43% at center);
   margin-top: 10%;
 }
 
@@ -55,12 +59,13 @@
 
 .content {
   grid-column: 1 / span 3;
-  grid-row: 4 / span 1;
+  grid-row: 3 / span 1;
   display: grid;
+  height: 40vh;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(7, 1fr);
-  padding: 3%;
-  margin: 5%;
+  justify-items: center;
+  padding: 2rem;
 }
 
 .account-info {
@@ -84,7 +89,7 @@
     display: grid;
     height: 100vh;
     grid-template-columns: 100%;
-    grid-template-rows: 10% 25% 25% 10%;
+    grid-template-rows: 10% 35%;
     margin: auto;
   }
 
@@ -99,9 +104,7 @@
 
   .profile-header {
     background-color: var(--primary);
-    grid-row: 2 / span 2;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(3, 1fr);
+    grid-row: 2 / span 1;
     text-align: center;
     overflow: hidden;
   }
@@ -110,12 +113,14 @@
     display: block;
   }
 
+  .profile-picture {
+    clip-path: circle(50% at center);
+  }
+
   .profile-picture>img {
-    clip-path: circle(30% at center);
     grid-column: 2 / span 1;
     grid-row: 1 / span 2;
-    margin-top: 0%;
-    height: 30vh;
+    width: 100%;
   }
 
   .profile-name {
@@ -127,14 +132,13 @@
   
   .edit-profile-text {
     grid-column: 2 / span 1;
-    grid-row: 3 / span 1;
     font-size: 15px;
   }
 
   .account-info {
-    height: 35vh;
     grid-column: 2 / span 1;
-    grid-row: 3 / span 2;
+    justify-items: center;
+    margin-top: 20%;
   }
 
   .profile-info {
